--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,10 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+      <div class="changeLang">
+        <span>Change language</span>
+      </div>
+      <div ng-view=""></div>
     </div>
 
     <div class="footer">
@@ -82,6 +85,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
