--- a/app/index.html
+++ b/app/index.html
@@ -39,14 +39,12 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/contact">Contact</a></li>
-              <li class="pull-right"><a ng-href="#/dashboard">Dashboard</a></li>
+              <li ng-if="nav.name != 'Login' && nav.enabled" ng-repeat="nav in navigation" ng-class="{'active': nav.active}">
+                <a href="#/{{nav.name | lowercase}}" ng-click="changeActiveNav(nav)">{{nav.name}}</a></li>
             </ul>
             <ul class="nav navbar-nav pull-right">
-              <li ng-if="!currentUser.active" class="pull-right"><a ng-href="#/login">Login</a></li>
-              <li ng-if="currentUser.active" class="pull-right">{{'Welcome ' + currentUser.firstName | translate}}</li>
+              <li ng-if="!currentUser.active" ng-click="changeActiveNav(navigation[4])" class="pull-right" ng-class="{'active': navigation[4].active}"><a ng-href="#/{{navigation[4].name | lowercase}}">{{navigation[4].name}}</a></li>
+              <li ng-if="currentUser.active" class="pull-right">{{'Welcome, ' + currentUser.firstName | translate}}</li>
             </ul>
           </div>
         </div>
