--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
       <script src="scripts/controllers/main.js"></script>
       <script src="scripts/controllers/login.js"></script>
       <script src="scripts/controllers/signup.js"></script>
+      <script src="scripts/controllers/contact.js"></script>
       <script src="scripts/controllers/dashboard.js"></script>
       <script src="scripts/services/dataService.js"></script>
       <!-- endbuild -->
