added resources, not working

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">globalHack7</a>
+            <div class="navbar-brand">Culture Shock Therapy</div>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -104,6 +104,7 @@
       <script src="scripts/controllers/signup.js"></script>
       <script src="scripts/controllers/contact.js"></script>
       <script src="scripts/controllers/dashboard.js"></script>
+      <script src="scripts/controllers/resources.js"></script>
       <script src="scripts/services/dataService.js"></script>
       <!-- endbuild -->
 </body>
